--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
         "@testing-library/jest-dom": "^5.11.5",
         "@testing-library/react": "^11.1.1",
         "@testing-library/user-event": "^12.2.0",
+        "node-sass": "^4.14.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
         "react-scripts": "4.0.0",
+        "react-scroll": "^1.8.1",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
