--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
-secrets.js
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# added by me
+/src/util/secrets.js
