--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-hook-form": "^6.13.1",
+        "react-horizontal-scrolling-menu": "^0.7.8",
         "react-icons": "^4.1.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "react-scroll": "^1.8.1",
+        "uuidv4": "^6.2.6",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
