--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "rc-progress": "^3.1.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-external-link": "^1.2.0",
         "react-hook-form": "^6.13.1",
         "react-horizontal-scrolling-menu": "^0.7.8",
         "react-icons": "^4.1.0",
