--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "node-sass": "^4.14.1",
         "rc-progress": "^3.1.1",
         "react": "^17.0.1",
+        "react-datepicker": "^3.3.0",
         "react-dom": "^17.0.1",
         "react-external-link": "^1.2.0",
         "react-hook-form": "^6.13.1",
