--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "@testing-library/jest-dom": "^5.11.5",
         "@testing-library/react": "^11.1.1",
         "@testing-library/user-event": "^12.2.0",
-        "axios": "^0.21.0",
+        "axios": "^0.21.1",
         "node-sass": "^4.14.1",
         "rc-progress": "^3.1.1",
         "react": "^17.0.1",
@@ -19,6 +19,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "react-scroll": "^1.8.1",
+        "react-tooltip": "^4.2.11",
         "uuidv4": "^6.2.6",
         "web-vitals": "^0.2.4"
     },
