--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
         "@testing-library/jest-dom": "^5.11.5",
         "@testing-library/react": "^11.1.1",
         "@testing-library/user-event": "^12.2.0",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.35",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.2",
         "axios": "^0.21.1",
         "node-sass": "^4.14.1",
         "rc-progress": "^3.1.1",
@@ -13,6 +17,7 @@
         "react-datepicker": "^3.3.0",
         "react-dom": "^17.0.1",
         "react-external-link": "^1.2.0",
+        "react-ga": "^3.3.0",
         "react-hook-form": "^6.13.1",
         "react-horizontal-scrolling-menu": "^0.7.8",
         "react-icons": "^4.1.0",
@@ -20,6 +25,7 @@
         "react-scripts": "4.0.0",
         "react-scroll": "^1.8.1",
         "react-tooltip": "^4.2.11",
+        "typescript": "^4.2.3",
         "uuidv4": "^6.2.6",
         "web-vitals": "^0.2.4"
     },
