--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "web-vitals": "^0.2.4"
     },
     "scripts": {
-        "start": "PORT=4001 react-scripts start",
+        "start": "rm -rf tsconfig.json && PORT=4001 react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -52,5 +52,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react-router-dom": "^5.3.2"
     }
 }
